# dsa-c-

./: CMakeLists.txt  CMakeUserPresets.json  Conversion.cpp  Helloworld  Helloworld.cpp  Quote7.cpp  Temperature  Temperature.cpp  Tickets  Tickets.cpp  aternatingSum.cpp  distance  distance.cpp  largeSmall  largeSmall.cpp  lol  lol.cpp  menu  numberGuess  numberGuess.cpp  power  power.cpp  prime.cpp  randomConditional  randomConditional.cpp  randomNumbers  randomNumbers.cpp  smallinteger  smallinteger.cpp  sumInteger  sumInteger.cpp  test  testscores.cpp  vectorElementOrder  vectorElementOrder.cpp  zerosmall  zerosmall.cpp
.cache/clangd/index/: Conversion.cpp.44ACAE6299B8ADF6.idx  Helloworld.cpp.3A1B73F4517FB22E.idx  Quote7.cpp.84FA78F25757DBE5.idx  Temperature.cpp.85A7327656B60C3D.idx  Tickets.cpp.506EF1BDB342CA76.idx  avg.cpp.C9BF4ECB02DF8FF4.idx  distance.cpp.A3EE938D1274E1F7.idx  largeSmall.cpp.55BD1C91B03A000B.idx  lol.cpp.886DBD3EA859D054.idx  menu.cpp.F636BAA169372BBC.idx  numberGuess.cpp.938FB310326C6316.idx  power.cpp.1446D5CDF0353D6C.idx  prime.cpp.0A276D952C86C018.idx  randomConditional.cpp.93C7C3BEC75115BB.idx  randomNumbers.cpp.64D219CFAE648BF3.idx  smallinteger.cpp.1D6F43F90811F23C.idx  sumInteger.cpp.42878FF45D6A3B24.idx  test.cpp.6F3271F116811320.idx  testscores.cpp.14E1EAE32395112D.idx  zerosmall.cpp.085C6590C139F94F.idx
